Imported Upstream version 0.1.1

--- a/po/CMakeLists.txt
+++ b/po/CMakeLists.txt
@@ -6,9 +6,13 @@ add_subdirectory( de )
 add_subdirectory( el )
 add_subdirectory( es )
 add_subdirectory( et )
+add_subdirectory( fi )
+add_subdirectory( fr )
 add_subdirectory( ga )
 add_subdirectory( hu )
 add_subdirectory( ja )
+add_subdirectory( kk )
+add_subdirectory( km )
 add_subdirectory( lt )
 add_subdirectory( nb )
 add_subdirectory( nds )
@@ -17,6 +21,8 @@ add_subdirectory( pl )
 add_subdirectory( pt )
 add_subdirectory( pt_BR )
 add_subdirectory( sk )
+add_subdirectory( sl )
 add_subdirectory( sv )
 add_subdirectory( uk )
+add_subdirectory( zh_CN )
 add_subdirectory( zh_TW )
