--- a/ktouchpadenabler.desktop
+++ b/ktouchpadenabler.desktop
@@ -13,8 +13,11 @@ Name[de]=Touchpad-Aktivierungsdienst für KDE
 Name[el]=KDE TouchPad Enabler Daemon
 Name[es]=Demonio de activación del TouchPad para KDE
 Name[et]=KDE puutepadja rakendamise deemon
+Name[fi]=KDE:n kosketuslevyn käyttöönoton taustaprosessi
 Name[fr]=Démon d'activation du pavé tactile pour KDE
 Name[hu]=KDE érintőtábla-bekapcsoló szolgáltatás
+Name[it]=Demone attivazione TouchPad di KDE
+Name[km]=ដេមិន​កម្មវិធី​បើក KDE TouchPad
 Name[nb]=KDE styreplatedaemon
 Name[nds]=Tastfeld-Stüerdämoon för KDE
 Name[nl]=Daemon voor inschakelen van KDE Touchpad
@@ -22,9 +25,11 @@ Name[pl]=Demon włączania TouchPada dla KDE
 Name[pt]=Serviço de Activação do Rato por Toque para o KDE
 Name[pt_BR]=Serviço de ativação do TouchPad para o KDE
 Name[sk]=Démon povoľovača KDE TouchPad
+Name[sl]=Odzadnji program za omogočanje sledilne ploščice
 Name[sv]=KDE:s demon för aktivering av tryckplatta
 Name[uk]=Фонова служба вмикання сенсорного керування у KDE
 Name[x-test]=xxKDE TouchPad Enabler Daemonxx
+Name[zh_CN]=KDE 触摸板启用器守护进程
 Name[zh_TW]=KDE 觸控板開啟伺服程式
 
 Comment=Toggles the enable status of the TouchPad
@@ -36,8 +41,12 @@ Comment[de]=Schaltet den Aktivierungsstatus von Touchpads um
 Comment[el]=Εναλλάσσει την ενεργή κατάσταση της επιφάνειας αφής
 Comment[es]=Conmuta el estado de disponibilidad del TouchPad
 Comment[et]=Puutepadja sisselülitatuse oleku muutmine
+Comment[fi]=Käynnistää tai poistaa käytöstä kosketuslevyn
 Comment[fr]=(Dés)Active l'état d'activation du pavé tactile
 Comment[hu]=Az érintőtábla ki- és bekapcsolása
+Comment[it]=Cambia lo stato di attivazione del TouchPad
+Comment[kk]=TouchPad рұқат етілген/етілмеген күй-жайын ауыстыру
+Comment[km]=បិទ/បើក​ ស្ថានភាព​បិទ/បើក​របស់ TouchPad
 Comment[nb]=Slår av og på status for styreplata
 Comment[nds]=Maakt dat Tastfeld an oder ut
 Comment[nl]=Schakelt de status van het TouchPad in of uit
@@ -45,7 +54,9 @@ Comment[pl]=Przełącza stan włączenia TouchPada
 Comment[pt]=Activa ou desactiva o rato por toque
 Comment[pt_BR]=Ativa ou desativa o TouchPad
 Comment[sk]=Prepína stav povolenia pre TouchPad
+Comment[sl]=Omogoči/onemogoči sledilno ploščico
 Comment[sv]=Ändrar tryckplattans aktiveringsstatus
 Comment[uk]=Вмикає або вимикає сенсорне керування
 Comment[x-test]=xxToggles the enable status of the TouchPadxx
+Comment[zh_CN]=切换触摸板启用状态
 Comment[zh_TW]=切換觸控板的開啟狀態
